# C-Craft

./: Block.cpp  Block.h  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Makefile  Player.cpp  Player.h  README.md  Renderer.cpp  Renderer.h  World.cpp  World.h  camera.h  cube.cpp  cube.h  glfw3.h  globals.h  inventory.cpp  inventory.h  main.cpp  math.cpp  math.h  minecraft_clone.c  noise.cpp  noise.h  shader.cpp  shader.h  texture.cpp  texture.h  world.cpp  world.h
include/glad/: glad.c  glad.h
shaders/: fragment.glsl  vertex.glsl
src/: block.cpp  block.h  inventory.cpp  inventory.h  main.cpp  perlin_noise.cpp  perlin_noise.h  player.cpp  player.h  renderer.cpp  renderer.h  tree_generator.cpp  tree_generator.h  utils.h  world.cpp  world.h
